objects/wkcc__LocationWellnessAggregation__c.object
<CustomObject>
    <description>This object aggregates individual wellness counts by location and status for those Employees who are directly attached to the location.</description>
    <fields>
        <fullName>wkcc__ExternalId__c</fullName>
        <description>A unique identifier for the record in the format &lt;Location Id&gt; + ‘:’ + &lt;Wellness Status&gt;.</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique identifier for the record in the format &lt;Location Id&gt; + ‘:’ + &lt;Wellness Status&gt;.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wkcc__LocationIndividualCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total count of individuals regardless of wellness status.</description>
        <inlineHelpText>The total count of individuals regardless of wellness status.</inlineHelpText>
        <label>Location Individual Count</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkcc__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location that this aggregation record relates to</description>
        <inlineHelpText>The location that this aggregation record relates to</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Location Wellness Aggregations</relationshipLabel>
        <relationshipName>LocationWellnessAggregations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkcc__NeedsReaggregation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Informs the periodic batch process that this aggregation should be re-aggregated.</description>
        <inlineHelpText>Informs the periodic batch process that this aggregation should be re-aggregated.</inlineHelpText>
        <label>Needs Reaggregation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__WellnessPercent__c</fullName>
        <description>The percent of the location’s individuals that are in the wellness status.</description>
        <formula>IF(
  wkcc__LocationIndividualCount__c = 0,
  0,
  wkcc__WellnessStatusIndividualCount__c / wkcc__LocationIndividualCount__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percent of the location’s individuals that are in the wellness status.</inlineHelpText>
        <label>Wellness %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>wkcc__WellnessStatusIndividualCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The count of individuals having the wellness status.</description>
        <inlineHelpText>The count of individuals having the wellness status.</inlineHelpText>
        <label>Wellness Status Individual Count</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkcc__WellnessStatus__c</fullName>
        <description>The wellness status group aggregated across individuals in this Location.</description>
        <inlineHelpText>The wellness status group aggregated across individuals in this Location.</inlineHelpText>
        <label>Wellness Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Location Wellness Aggregation</label>
    <nameField>
        <displayFormat>LWA-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Wellness Aggregations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>